@@ -1,5 +1,9 @@
 2007-04-25  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/despeckle.c: minor cleanups.
+
+2007-04-25  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpscrolledpreview.c: also use the middle mouse
 	button for panning.
 
